--- a/docs/guide/release_notes/index.asciidoc
+++ b/docs/guide/release_notes/index.asciidoc
@@ -4,6 +4,7 @@
 [discrete]
 === 8.x
 
+* <<release_notes_84, 8.4.0 Release Notes>>
 * <<release_notes_83, 8.3.0 Release Notes>>
 * <<release_notes_82, 8.2.0 Release Notes>>
 * <<release_notes_81, 8.1.0 Release Notes>>
@@ -21,6 +22,7 @@
 * <<release_notes_711, 7.11.0 Release Notes>>
 * <<release_notes_710, 7.10.0.beta.1 Release Notes>>
 
+include::84.asciidoc[]
 include::83.asciidoc[]
 include::82.asciidoc[]
 include::81.asciidoc[]
