--- a/docs/guide/release_notes/index.asciidoc
+++ b/docs/guide/release_notes/index.asciidoc
@@ -4,6 +4,7 @@
 [discrete]
 === 8.x
 
+* <<release_notes_88, 8.8.0 Release Notes>>
 * <<release_notes_87, 8.7.0 Release Notes>>
 * <<release_notes_86, 8.6.0 Release Notes>>
 * <<release_notes_85, 8.5.0 Release Notes>>
@@ -25,6 +26,7 @@
 * <<release_notes_711, 7.11.0 Release Notes>>
 * <<release_notes_710, 7.10.0.beta.1 Release Notes>>
 
+include::88.asciidoc[]
 include::87.asciidoc[]
 include::86.asciidoc[]
 include::85.asciidoc[]
